HosMan/main/default/objects/FollowUps__c/FollowUps__c.object-meta.xml
<CustomObject>
    <label>FollowUps</label>
    <nameField>
        <displayFormat>ID-{000}</displayFormat>
        <label>FollowUp ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FollowUpss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>