HosMan/main/default/objects/FollowUps__c/fields/Add_Ref_By__c.field-meta.xml
<CustomField>
    <fullName>Add_Ref_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Ref By</label>
    <referenceTo>Add_Ref_By__c</referenceTo>
    <relationshipLabel>FollowUpss</relationshipLabel>
    <relationshipName>FollowUpss</relationshipName>
    <type>Lookup</type>
</CustomField>