HosMan/main/default/objects/FollowUps__c/fields/Blood_Urea__c.field-meta.xml
<CustomField>
    <fullName>Blood_Urea__c</fullName>
    <label>Blood Urea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>