HosMan/main/default/objects/FollowUps__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>FollowUpss</relationshipLabel>
    <relationshipName>FollowUpss</relationshipName>
    <type>Lookup</type>
</CustomField>