HosMan/main/default/objects/FollowUps__c/fields/FollowUp_Date__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Date__c</fullName>
    <label>FollowUp Date</label>
    <type>Date</type>
</CustomField>