HosMan/main/default/objects/FollowUps__c/fields/New_Patient__c.field-meta.xml
<CustomField>
    <fullName>New_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Patient</label>
    <referenceTo>New_Patient__c</referenceTo>
    <relationshipLabel>FollowUpss</relationshipLabel>
    <relationshipName>FollowUpss</relationshipName>
    <type>Lookup</type>
</CustomField>