HosMan/main/default/objects/FollowUps__c/fields/Other_1__c.field-meta.xml
<CustomField>
    <fullName>Other_1__c</fullName>
    <label>Other 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>