HosMan/main/default/objects/FollowUps__c/fields/Other_2__c.field-meta.xml
<CustomField>
    <fullName>Other_2__c</fullName>
    <label>Other 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>