HosMan/main/default/objects/FollowUps__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Patient ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>