HosMan/main/default/objects/FollowUps__c/fields/Serum_Albumin__c.field-meta.xml
<CustomField>
    <fullName>Serum_Albumin__c</fullName>
    <label>Serum Albumin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>