HosMan/main/default/objects/FollowUps__c/fields/Serum_Cholesterol__c.field-meta.xml
<CustomField>
    <fullName>Serum_Cholesterol__c</fullName>
    <label>Serum Cholesterol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>