HosMan/main/default/objects/FollowUps__c/fields/SrCreatinine__c.field-meta.xml
<CustomField>
    <fullName>SrCreatinine__c</fullName>
    <label>SrCreatinine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>