HosMan/main/default/objects/FollowUps__c/fields/Urine_PC__c.field-meta.xml
<CustomField>
    <fullName>Urine_PC__c</fullName>
    <label>Urine PC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>