HosMan/main/default/objects/FollowUps__c/fields/Urine_PH__c.field-meta.xml
<CustomField>
    <fullName>Urine_PH__c</fullName>
    <label>Urine PH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>