HosMan/main/default/objects/FollowUps__c/fields/Urine_Protein__c.field-meta.xml
<CustomField>
    <fullName>Urine_Protein__c</fullName>
    <label>Urine Protein</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>