HosMan/main/default/objects/FollowUps__c/fields/Urine_RBC__c.field-meta.xml
<CustomField>
    <fullName>Urine_RBC__c</fullName>
    <label>Urine RBC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>